--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,7 +8,15 @@
   <title>해커톤 템플릿 프로젝트</title>
   <link rel="stylesheet" href="./index.scss">
 </head>
+
 <body>
-  <h1>해커톤 템플릿 프로젝트</h1>
+  <h1>Hello :)</h1>
+
+
+
+
+
+  <script src="index.js"></script>
 </body>
+
 </html>
